# TextParser

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
Examples/: Makefile.in
Examples/tpp_examples/: Makefile.in
include/: Makefile.in
src/: Makefile.am  Makefile.in  TextParser.cpp  TextParserTree.cpp
