#
# TextParser - Text Parsing Library
#
# Copyright (C) 2012-2013 Institute of Industrial Science, The University of Tokyo.
# All rights reserved.
#

ACLOCAL_AMFLAGS=-I m4
SUBDIRS = bin src include Examples
EXTRA_DIST=Doxyfile Makefile_doxygen doc README Makefile_hand ChangeLog LICENSE
DIST_SUBDIRS=bin src include Examples
DISTCLEANFILES=*~ *.o *.lo *.la *.a
MAINTAINERCLEANFILES=doxygen
ENABLEMPI=@enablempi@